Caps on menu buttons labels

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -3,13 +3,11 @@
 
     <string name="app_name">Quizz -Places</string>
     <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
 	
     <!-- Menu -->
-    <string name="label_button_play">Jouer</string>
-    <string name="label_button_free_hints">Indices Gratuits</string>
-    <string name="label_button_stats">Statistiques</string>
-   	<string name="label_button_settings">Options</string>
-   	<string name="label_button_quit">Quitter</string>
+    <string name="label_button_play">JOUER</string>
+    <string name="label_button_free_hints">INDICES GRATUITS</string>
+    <string name="label_button_stats">STATISTIQUES</string>
+   	<string name="label_button_settings">OPTIONS</string>
    	
 </resources>
