--- a/res/values-en/strings.xml
+++ b/res/values-en/strings.xml
@@ -3,13 +3,11 @@
 
     <string name="app_name">Quizz -Places</string>
     <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
 	
     <!-- Menu -->
-    <string name="label_button_play">Play</string>
-    <string name="label_button_free_hints">Free Hints</string>
-    <string name="label_button_stats">Stats</string>
-   	<string name="label_button_settings">Settings</string>
-   	<string name="label_button_quit">Quit</string>
+    <string name="label_button_play">PLAY</string>
+    <string name="label_button_free_hints">FREE HINTS</string>
+    <string name="label_button_stats">STATS</string>
+   	<string name="label_button_settings">SETTINGS</string>
    	
 </resources>
