--- a/res/values-en/strings.xml
+++ b/res/values-en/strings.xml
@@ -3,14 +3,21 @@
 
     <string name="app_name">Quizz -Places</string>
     <string name="hello_world">Hello world!</string>
-	
+
+   	<!-- ActionBar -->
+  	<string name="ab_stats_title">Statistics</string>
+    <string name="ab_settings_title">Settings</string>    
+    	
     <!-- Menu -->
     <string name="label_button_play">PLAY</string>
     <string name="label_button_free_hints">FREE HINTS</string>
     <string name="label_button_stats">STATS</string>
-   	<string name="label_button_settings">SETTINGS</string>
+   	<string name="label_button_settings">SETTINGS</string>   	
+   		
+   	<!-- Settings -->
    	<string name="audio_on">Audio is On</string>
    	<string name="audio_off">Audio is Off</string>
    	<string name="vibration_on">Vibration is On</string>
    	<string name="vibration_off">Vibration is Off</string>
+
 </resources>
