--- a/res/values-en/strings.xml
+++ b/res/values-en/strings.xml
@@ -20,4 +20,12 @@
    	<string name="vibration_on">Vibration is On</string>
    	<string name="vibration_off">Vibration is Off</string>
 
+   	<!-- Stats -->
+   	<string name="unlocked_lvl">Unlocked level</string>
+   	<string name="places_found">Total found</string>
+   	<string name="easy_found">Easy found</string>
+   	<string name="medium_found">Medium found</string>
+   	<string name="hard_found">Hard found</string>
+   	<string name="used_hints">Indices utilisés</string>
+   	
 </resources>
