--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Quizz -Places</string>
+    <string name="app_name">Quiz - Tour du Monde</string>
     <string name="hello_world">Hello world!</string>
 	
    	<!-- ActionBar -->
