Dynamic actionbar for sections list view and pictures grid view. Bug fix in stats sql query. Dynamic section status (status were ignored in db, it is fixed now) and sections list shows padlock when it should so only.

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -8,8 +8,9 @@
     
    	<!-- ActionBar -->
   	<string name="ab_stats_title">Statistiques</string>
-    <string name="ab_settings_title">Paramètres</string>    
-    
+    <string name="ab_settings_title">Paramètres</string>
+    <string name="ab_sections_title">Niveaux</string>
+    <string name="ab_levels_grid_title">Photos</string>
     
     <!-- Menu -->
     <string name="label_button_play">JOUER</string>
