Optimized launch of app (background and title bar hiding) inside styles

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -34,4 +34,7 @@
    	<string name="hard_found">Difficiles reconnus</string>
    	<string name="used_hints">Indices utilisés</string>
    	
+   	<!-- Level -->
+   	<string name="level_success_title">Bien joué !</string>
+   	
 </resources>
