--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -34,6 +34,9 @@
    	<string name="hard_found">Difficiles reconnus</string>
    	<string name="used_hints">Indices utilisés</string>
    	
+   	<!-- Level grid -->
+   	<string name="complete">réussi</string>
+   	
    	<!-- Level -->
    	<string name="level_success_title">Bien joué !</string>
    	
