--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,11 +19,15 @@
    	<string name="label_button_settings">SETTINGS</string>   	
    		
    	<!-- Settings -->
-   	<string name="audio_on">Audio on</string>
-   	<string name="audio_off">Audio off</string>
-   	<string name="vibration_on">Vibration on</string>
-   	<string name="vibration_off">Vibration off</string>
+   	<string name="audio">Audio</string>
+<!--    	<string name="audio">Audio off</string> -->
+   	<string name="vibration">Vibration</string>
+<!--    	<string name="vibration">Vibration off</string> -->
+   	<string name="exit_popup">Confirm before exit</string>
 	<string name="reset_game">Reset game</string>
+	<string name="setting_game_data">Game data</string>
+	<string name="setting_global_setup">Global setup</string>
+	<string name="clear_cache">Clear cache</string>
    	<string name="confirm_reset">Your progression and all your unlocked hints will be cleared. Are you sure you want to reset the game ?</string>
 
    	<!-- Stats -->
