Added hint add letters button (not functionnal yet) Slight design change on sections list

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -43,5 +43,6 @@
    	
    	<!-- Level -->
    	<string name="level_success_title">Well done !</string>
+   	<string name="level_not_enough_hints">You don\'t have any hint left!</string>
    	
 </resources>
