--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -43,5 +43,6 @@
    	
    	<!-- Level -->
    	<string name="level_success_title">Bien joué !</string>
+   	<string name="level_not_enough_hints">Vous n\'avez plus d\'indices en stock!</string>
    	
 </resources>
