Bugs fix. Remaining levels to unlock sections.

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -46,5 +46,8 @@
    	<string name="level_not_enough_hints">Vous n\'avez plus d\'indices en stock!</string>
    	<string name="level_info_title">Description</string>
    	<string name="level_no_info_found">Pas d\'informations trouvées.</string>
-   		
+   	
+   	<!-- sections list -->
+   	<string name="unlock_section_requirement">Trouve X images pour débloquer</string>
+   			
 </resources>
