--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,4 +47,7 @@
    	<string name="level_info_title">Information</string>
    	<string name="level_no_info_found">No information found.</string>
    	
+   	<!-- sections list -->
+   	<string name="unlock_section_requirement">Find X pictures to unlock</string>
+   		
 </resources>
