Badges are now unlockables

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -46,6 +46,8 @@
     <string name="level_not_enough_hints">You don\'t have any hint left!</string>
    	<string name="level_info_title">Information</string>
    	<string name="level_no_info_found">No information found.</string>
+   	<string name="level_unlock_section">You\'ve unlocked the &lt;b>&lt;u>level %1$s&lt;/u>&lt;/b> !</string>
+   	<string name="level_unlock_badge">You are now a &lt;b>&lt;u>%1$s&lt;/u>&lt;/b> !</string>
    	
    	<!-- sections list -->
    	<string name="unlock_section_requirement">Find X pictures to unlock</string>
