--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,7 +29,13 @@
     <string name="setting_global_setup">Global setup</string>
     <string name="clear_cache">Clear cache</string>
     <string name="confirm_reset">Your progression and all your unlocked hints will be cleared. Are you sure you want to reset the game ?</string>
-
+    <string name="rate_app">Rate this app</string>
+    <string name="rate_app_info">Give us feedback and help us improve this application ;)</string>
+    <string name="rate_app_button">Rate</string>
+    <string name="remove_ads">Get rid of ads</string>
+    <string name="remove_ads_info">Either you want to support us, or ads are driving you crazy…</string>
+    <string name="remove_ads_button">Donate</string>
+    
     <!-- Stats -->
     <string name="unlocked_lvl">Unlocked level</string>
     <string name="places_found">Total found</string>
