--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -56,7 +56,7 @@
    	<string name="level_unlock_badge">You are now a &lt;b>&lt;u>%1$s&lt;/u>&lt;/b> !</string>
    	
    	<!-- sections list -->
-   	<string name="unlock_section_requirement">Find X pictures to unlock</string>
+   	<string name="unlock_section_requirement">Find %d pictures to unlock</string>
    	
    	<!-- Badges -->
    	<string name="badge_traveler">Casual traveler</string>
