--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -43,6 +43,7 @@
    	<string name="medium_found">Moyens reconnus</string>
    	<string name="hard_found">Difficiles reconnus</string>
    	<string name="used_hints">Indices utilisés</string>
+   	<string name="stats_title_label">Vous êtes actuellement:</string>
    	
    	<!-- Level grid -->
    	<string name="complete">réussi</string>
@@ -53,7 +54,7 @@
    	<string name="level_info_title">Description</string>
    	<string name="level_no_info_found">Pas d\'informations trouvées.</string>
    	<string name="level_unlock_section">Vous avez débloqué le &lt;b>&lt;u>niveau %1$s&lt;/u>&lt;/b> !</string>
-   	<string name="level_unlock_badge">Vous êtes maintenant un &lt;b>&lt;u>%1$s&lt;/u>&lt;/b> !</string>
+   	<string name="level_unlock_badge">Vous avez gagné le titre de &lt;b>&lt;u>%1$s&lt;/u>&lt;/b> !</string>
    	
    	<!-- sections list -->
    	<string name="unlock_section_requirement">Trouve X images pour débloquer</string>
