--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -43,7 +43,8 @@
    	<string name="medium_found">Moyens reconnus</string>
    	<string name="hard_found">Difficiles reconnus</string>
    	<string name="used_hints">Indices utilisés</string>
-   	<string name="stats_title_label">Vous êtes actuellement:</string>
+   	<string name="badge_title_label">Vous êtes actuellement:</string>
+   	<string name="stats_title_label">Vos stats:</string>
     <string name="badge_congrats">Votre grade courrant est : </string>
     <string name="levels_left_before_next_badge">Promotion dans %d images</string>
     <string name="completed_sections">Niveaux complétés</string>
@@ -54,11 +55,16 @@
    	
    	<!-- Level -->
    	<string name="level_success_title">Bien joué !</string>
-   	<string name="level_not_enough_hints">Vous n\'avez plus d\'indices en stock!</string>
+   	<string name="level_not_enough_hints">Vous n\'avez pas assez d\'indices en stock!</string>
    	<string name="level_info_title">Description</string>
    	<string name="level_no_info_found">Pas d\'informations trouvées.</string>
    	<string name="level_unlock_section">Vous avez débloqué le &lt;b>&lt;u>niveau %1$s&lt;/u>&lt;/b> !</string>
    	<string name="level_unlock_badge">Vous avez gagné le titre de &lt;b>&lt;u>%1$s&lt;/u>&lt;/b> !</string>
+   	<string name="level_unlock_info">Débloquer (coûte 2 indices)</string>
+   	<plurals name="level_nb_hints_label">
+        <item quantity="one">Vous avez %1$d indice en stock</item>
+        <item quantity="other">Vous avez %1$d indices en stock</item>
+    </plurals>
    	
    	<!-- sections list -->
    	<string name="unlock_section_requirement">Trouve %d images pour débloquer</string>
