--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -43,7 +43,8 @@
     <string name="medium_found">Medium found</string>
     <string name="hard_found">Hard found</string>
     <string name="used_hints">Used hints</string>
-   	<string name="stats_title_label">Your are currently:</string>
+   	<string name="badge_title_label">Your are currently:</string>
+   	<string name="stats_title_label">Your stats:</string>
     <string name="badge_congrats">Your current grade is : </string>
     <string name="levels_left_before_next_badge">%d images left to get a promotion</string>
     <string name="completed_sections">Completed levels</string>
@@ -54,11 +55,16 @@
 
     <!-- Level -->
     <string name="level_success_title">Well done !</string>
-    <string name="level_not_enough_hints">You don\'t have any hint left!</string>
+    <string name="level_not_enough_hints">You don\'t have enough hints left!</string>
    	<string name="level_info_title">Information</string>
    	<string name="level_no_info_found">No information found.</string>
    	<string name="level_unlock_section">You\'ve unlocked the &lt;b>&lt;u>level %1$s&lt;/u>&lt;/b> !</string>
    	<string name="level_unlock_badge">You\'ve earned the title of &lt;b>&lt;u>%1$s&lt;/u>&lt;/b> !</string>
+   	<string name="level_unlock_info">Unlock (costs 2 hints)</string>
+   	<plurals name="level_nb_hints_label">
+        <item quantity="one">You currently have %1$d hint</item>
+        <item quantity="other">You currently have %1$d hints</item>
+    </plurals>
    	
    	<!-- sections list -->
    	<string name="unlock_section_requirement">Find %d pictures to unlock</string>
