--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -66,6 +66,7 @@
         <item quantity="other">You currently have %1$d hints</item>
     </plurals>
    	<string name="level_success_gain_hint">You gain 1 hint</string>
+   	<string name="level_success_section_cleared">Section completed!</string>
    	
    	<!-- sections list -->
    	<plurals name="unlock_section_requirement">
